blocks/header/__lang-link/header__lang-link.css
.header__lang-link {
  margin: auto;
  font-style: normal;
  font-weight: normal;
  font-size: 24px;
  line-height: 28px;
  text-decoration: none;
  color: #fff;
}

.header__lang-link:hover {
  opacity: 0.8;
  transition: opacity .3s linear 0s;
}

@media screen and (min-width: 320px) and (max-width: 767px) {
  .header__lang-link {
    font-size: 18px;
    line-height: 20px;
  }
}

